<resources>
    <string name="app_name">UDS</string>
    <string name="signIn_text">Sign in</string>
    <string name="signUp_text">Sign up</string>
    <string name="babysitter_text">babysitter?</string>
    <string name="mother_text">mother?</string>
    <string name="category">who are you?</string>
    <string name="Email">email</string>
    <string name="prompt_password">password</string>
    <string name="prompt_confirm_password">confirm password</string>
    <string name="register">register</string>
    <string name="prompt_username">username</string>
    <string name="have_account">already have an account? sign in</string>
    <string name="NoAccount">don\'t have an account? join us</string>
    <string name="prompt_name">your name</string>
    <string name="prompt_childName">child name</string>
    <string name="title_activity_babysitter_home_page1">BabysitterHomePage1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_reports">Report</string>
    <string name="title_me">Me</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_Settings">settings</string>
    <string name="title_logOut">log Out</string>
    <string name="title_history">history</string>
    <string name="prompt_motherName">Mother name</string>
    <string name="prompt_phoneNum">contact number</string>
    <string name="notes">Add notes</string>
    <string name="save">save changes</string>
    <string name="cancel">cancel</string>
    <string name="add_schedule">Add schedule</string>
    <string name="Time">Time</string>
    <string name="Date">Date</string>
    <string name="Day">day</string>
    <string name="add">Add</string>
    <string name="deleteDate">Delete date?</string>
    <string name="prompt_date">Enter the date you want to delete</string>
    <string name="Bio">bio</string>
    <string name="age">age</string>
    <string name="welcome_View">Hello</string>
    <string name="title_order">Create Order</string>
    <string name="title_payments">payments</string>
    <string name="title_trackOrder">Track Order</string>
    <string name="title_profile">profile</string>
    <string name="prompt_Name">Name</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_bio">Bio</string>
    <string name="add_child">Add child</string>
    <string name="prompt_boy">Boy</string>
    <string name="prompt_girl">Girl</string>
    <string name="choose_gender">Gender</string>
    <string name="next">Next</string>
    <string name="create_order">Create New Order</string>
    <string name="timeFrom">From:</string>
    <string name="timeTo">To:</string>
    <string name="timeAt">a.m/p.m</string>
    <string name="requestText">Request this Nany?</string>
    <string name="request">Request</string>
    <string name="finish">finish</string>
    <string name="hours_text">How many hours?</string>
    <string name="chat">Chat</string>
    <string-array name="hours">
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
    </string-array>

</resources>
