<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BabysitterRegister">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="290dp"
        >

        <EditText
            android:id="@+id/username_text"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:hint="@string/prompt_username"

            />

        <EditText
            android:id="@+id/email_text"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:ems="10"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:inputType="textEmailAddress"
            android:hint="@string/Email"
            />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:ems="10"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"
            />

        <EditText
            android:id="@+id/confirm_password_text"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="210dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/prompt_confirm_password"
            />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="270dp"
            />

        <TextView
            android:id="@+id/signIn_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="330dp"
            />
    </RelativeLayout>
</RelativeLayout>