<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MotherOrBabysitter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <TextView
            android:id="@+id/category_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_marginBottom="50dp"
            android:textAlignment="center"
            android:textSize="30sp"

            />

        <Button
            android:id="@+id/mother_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mother_text"

            />

        <Button
            android:id="@+id/babysitter_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/babysitter_text" />
    </LinearLayout>
</RelativeLayout>