<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MotherProfile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"

        >

        <ImageButton
            android:id="@+id/profile_image"
            android:layout_marginTop="50dp"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:layout_gravity="center"

            />

        <TextView
            android:id="@+id/motherNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/prompt_motherName" />

        <EditText
            android:id="@+id/motherNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/emailView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Email"

            />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/phoneView"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_phoneNum"
            android:layout_gravity="center"
            />
        <EditText
            android:id="@+id/phoneNumberText"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/Save_btn"
            android:layout_marginTop="30dp"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/save"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/cancel"
            android:layout_gravity="center"
            />
    </LinearLayout>

</RelativeLayout>