<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BabysitterProfile"
    android:background="@drawable/bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"

        >
        <ImageView
            android:id="@+id/profile_image"
            android:layout_marginTop="20dp"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:srcCompat="@drawable/logo_1"
            android:layout_gravity="center"

            />

        <TextView
            android:id="@+id/NameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/stc_bold"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            android:text="@string/prompt_Name" />

        <EditText
            android:id="@+id/NameText"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:textColorHint="@color/pink"
            android:gravity="center"
            android:background="@drawable/bord_age"
            android:inputType="textPersonName"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/emailView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/stc_bold"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            android:text="@string/Email"

            />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textColorHint="@color/pink"
            android:gravity="center"
            android:background="@drawable/bord_age"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/phoneView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_phoneNum"
            android:fontFamily="@font/stc_bold"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            android:layout_gravity="center"
            />
        <EditText
            android:id="@+id/phoneNumberText"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:textColorHint="@color/pink"
            android:gravity="center"
            android:background="@drawable/bord_age"
            android:inputType="phone"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/ageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_age"
            android:layout_gravity="center"
            android:fontFamily="@font/stc_bold"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/ageText"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:textColorHint="@color/pink"
            android:gravity="center"
            android:background="@drawable/bord_age"
            android:inputType="phone"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/bioView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_bio"
            android:fontFamily="@font/stc_bold"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            android:layout_gravity="center"
            />
        <EditText
            android:id="@+id/bioText"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:textColorHint="@color/pink"
            android:gravity="center"
            android:background="@drawable/bord_age"
            android:inputType="phone"
            android:layout_gravity="center"
            />



        <Button
            android:id="@+id/Save_btn"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/save"
            android:layout_gravity="center"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/cancel"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_gravity="center"
            />
    </LinearLayout>

</ScrollView>