<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".SignIn">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/sign_in_logo"
        android:layout_marginTop="50dp"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/welcom"
        android:layout_marginTop="240dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"

        >

        <EditText
            android:id="@+id/SignIn_email_text"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:hint="@string/Email"
            android:textColor="#ffff"
            android:fontFamily="@font/stc_regular"
            android:background="@drawable/user"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/SignIn_password_text"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="110dp"
            android:background="@drawable/pass"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:textColor="#ffff"
            android:fontFamily="@font/stc_regular"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signIn_btn"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="170dp"
            android:background="@drawable/sing_in" />


        <TextView
            android:id="@+id/joinUs_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NoAccount"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="240dp"

            />
    </RelativeLayout>
</RelativeLayout>